<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#64B5F6"
    tools:context="com.example.fatiha.lab3gestioncontacts.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="48dp"
        android:text="@string/titre"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginTop="25dp"
        android:background="#ED7F10"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:text="@string/insertion" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button1"
        android:layout_alignRight="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="16dp"
        android:background="#ED7F10"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:text="@string/lister" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_below="@+id/button2"
        android:layout_marginTop="16dp"
        android:background="#ED7F10"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:text="@string/chercher" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button3"
        android:layout_marginTop="15dp"
        android:background="#ED7F10"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:text="@string/effacer" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button4"
        android:layout_alignRight="@+id/button4"
        android:layout_below="@+id/button4"
        android:layout_marginTop="12dp"
        android:text="@string/changer"
        android:background="#ED7F10"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        />

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignStart="@+id/button5"
        android:layout_below="@+id/button5"
        android:layout_marginTop="17dp"
        android:background="#ED7F10"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:text="@string/appeler" />


     

</RelativeLayout>
