<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#1E88E5">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:text="@string/liste"
        android:textSize="14sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"
        android:background="#ED7F10"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout4"
        android:weightSum="8">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lid"
            android:textSize="18sp"
            android:textStyle="bold"
            />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/nom"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/prenom"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/tel"
            android:textSize="18sp"
            android:textStyle="bold"
            />
    </LinearLayout>

    <ListView
        android:id="@+id/ilistview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout4"
        android:layout_marginTop="23dp" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout4"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:backgroundTint="@color/colorPrimary"
        app:srcCompat="@android:drawable/ic_media_previous" />

</RelativeLayout>