<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fatiha.lab3gestioncontacts.Inserer_Contact"
    android:background="#ED7F10"
    >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:text="@string/insertion"
        android:textSize="18sp"
        android:textColor="#000000"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="41dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">

        <TextView
            android:id="@+id/nom"
            android:layout_width="11dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nom"
            android:textSize="14sp"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText

            android:id="@+id/txtnom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=" " />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignStart="@+id/linearLayout"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="41dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout2">

        <TextView
            android:id="@+id/prenom"
            android:layout_width="12dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prenom"
            android:textSize="14sp"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtprenom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_alignStart="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout3">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="17dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tel"
            android:textSize="14sp"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txttel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="phone" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:background="#ED7F10"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:text="@string/inserer" />

    <ImageButton
        android:id="@+id/imageButtonr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:backgroundTint="@color/colorPrimary"
        app:srcCompat="@android:drawable/ic_media_previous" />


</RelativeLayout>
