<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ED7F10"
    >

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp"
        android:text="@string/appeler"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="#000000"
        />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView6"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="41dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nom"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/iNom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textSize="18sp"
            android:textStyle="bold"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout5"
        android:layout_alignStart="@+id/linearLayout5"
        android:layout_below="@+id/linearLayout5"
        android:layout_marginTop="33dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout6">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prenom"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/iPrenom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textSize="18sp"
            android:textStyle="bold"
            android:inputType="textPersonName"
            android:text=" " />
    </LinearLayout>

    <ImageButton
        android:id="@+id/modifRetour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:background="#000000"
        app:srcCompat="@android:drawable/ic_media_previous" />

    <ImageButton
        android:id="@+id/chercherIc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView6"
        android:background="#000000"
        app:srcCompat="@android:drawable/ic_menu_search" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout6"
        android:layout_alignStart="@+id/linearLayout6"
        android:layout_below="@+id/linearLayout6"
        android:layout_marginTop="19dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout7">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="49dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tel"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/iTelephone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/modifTelbt"
            android:layout_alignStart="@+id/modifTelbt"
            android:layout_below="@+id/linearLayout7"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout7"
        android:layout_alignStart="@+id/linearLayout7"
        android:layout_below="@+id/linearLayout7"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout8">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/id"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/modifTelbt"
            android:layout_alignStart="@+id/modifTelbt"
            android:layout_below="@+id/linearLayout7"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:layout_weight="1"
            android:ems="10"
            android:textSize="18sp"
            android:textStyle="bold"
            android:inputType="textPersonName" />
    </LinearLayout>

    <Button
        android:id="@+id/modifTelbt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout8"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:background="#000000"
        android:text="@string/telephoner"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />


</RelativeLayout>

